--- a/tests/Application/config/packages/doctrine.yaml
+++ b/tests/Application/config/packages/doctrine.yaml
@@ -22,6 +22,6 @@ doctrine:
             App:
                 is_bundle: false
                 type: annotation
-                dir: '%kernel.project_dir%/tests/Application/src/Entity'
+                dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'BPCI\SumUp\Tests\Entity'
                 alias: App
