--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,28 +9,22 @@
          >
     <php>
         <ini name="error_reporting" value="-1" />
-<!--       <env name="KERNEL_CLASS" value="BPCI\SumUp\Kernel" /> -->
-<!--       <env name="APP_ENV" value="test" /> -->
-<!--       <env name="APP_DEBUG" value="1" /> -->
-<!--       <env name="APP_SECRET" value="s$cretf0rt3st" /> -->
-<!--       <env name="SHELL_VERBOSITY" value="-1" /> -->
-        <!-- define your env variables for the test env here -->
     </php>
 
     <testsuites>
         <testsuite name="SumUp Test Suite">
-            <directory>tests/</directory>
+            <directory suffix="Test.php">tests/</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./src/</directory>
-            <directory>./tests/Application/</directory>
+			<exclude>
+				<directory suffix=".php">vendor/</directory>
+				<directory suffix=".php">bin/</directory>
+				<directory suffix=".php">build/</directory>
+			</exclude>
         </whitelist>
     </filter>
 
-    <listeners>
-<!--        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" /> -->
-    </listeners>
 </phpunit>
