--- a/composer.json
+++ b/composer.json
@@ -1,68 +1,72 @@
 {
-    "name": "bpci/sum-up",
-    "description": "SumUp PHP SDK",
-    "type": "library",
-    "minimum-stability": "stable",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Bruce Carvalho",
-            "email": "hi@brucepc.com.br"
-        }
-    ],
-    "require": {
-        "php": "^7",
-        "guzzlehttp/guzzle": "^6.3",
-        "symfony/form": "^4.0"
-    },
-    "require-dev": {
-        "doctrine/doctrine-bundle": "^1.8",
-        "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/console": "^4.0",
-        "symfony/dotenv": "^4.0",
-        "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/lts": "^4@dev",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "^1.0",
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/thanks": "^1.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "prefer-stable": true,
-    "extra": {
-	    "src-dir" : "tests/Application/src",
-	    "config-dir": "tests/Application/config"
-    },
-    "autoload": {
-        "psr-4": {
-            "BPCI\\SumUp\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "BPCI\\SumUp\\Tests\\": ["tests/Application/src", "tests/Application"]
-        }
+  "name": "bpci/sum-up",
+  "description": "SumUp PHP SDK",
+  "type": "library",
+  "minimum-stability": "stable",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Bruce Carvalho",
+      "email": "hi@brucepc.com.br"
     }
+  ],
+  "require": {
+    "php": "^7",
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/form": "^4.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.5",
+    "doctrine/doctrine-bundle": "^1.8",
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "symfony/console": "^4.0",
+    "symfony/dotenv": "^4.0",
+    "symfony/flex": "^1.0",
+    "symfony/framework-bundle": "^4.0",
+    "symfony/lts": "^4@dev",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/orm-pack": "^1.0",
+    "symfony/phpunit-bridge": "^4.0",
+    "symfony/thanks": "^1.0",
+    "symfony/twig-bundle": "^4.0",
+    "symfony/web-server-bundle": "^4.0",
+    "symfony/yaml": "^4.0"
+  },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "prefer-stable": true,
+  "extra": {
+    "src-dir": "tests/Application/src",
+    "config-dir": "tests/Application/config"
+  },
+  "autoload": {
+    "psr-4": {
+      "BPCI\\SumUp\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "BPCI\\SumUp\\Tests\\": [
+        "tests/Application/src",
+        "tests/Application"
+      ]
+    }
+  }
 }
