--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.1/phpunit.xsd"
-         backupGlobals="false"
-         colors="true"
-         bootstrap="vendor/autoload.php"
-         >
+<phpuniti
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/6.3/phpunit.xsd"
+        backupGlobals="false"
+        colors="true"
+        bootstrap="vendor/autoload.php"
+>
     <php>
-        <ini name="error_reporting" value="-1" />
+        <ini name="error_reporting" value="-1"/>
     </php>
 
     <testsuites>
         <testsuite name="SumUp Test Suite">
-            <directory suffix="Test.php">tests/</directory>
+            <directory suffix="Test.php">tests</directory>
+            <exclude>
+                <directory>Application</directory>
+            </exclude>
         </testsuite>
     </testsuites>
 
     <filter>
-        <whitelist>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src/</directory>
 			<exclude>
-				<directory suffix=".php">vendor/</directory>
-				<directory suffix=".php">bin/</directory>
-				<directory suffix=".php">build/</directory>
+                <directory>./vendor/</directory>
+                <directory>./tests/</directory>
 			</exclude>
         </whitelist>
     </filter>
-
-</phpunit>
+    <logging>
+        <log type="coverage-html" target="build/html"/>
+        <log type="coverage-clover" target="build/clover.xml"/>
+    </logging>
+</phpuniti>
