--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,7 +13,13 @@ build:
             environment:
                 node:
                     version: 6.0.0
-        tests: true
+        tests:
+          override:
+            -
+              command: 'vendor/bin/phpunit --coverage-clover=build/clover.xml'
+              coverage:
+                file: 'build/clover.xml'
+                format: 'clover'
 filter:
     excluded_paths:
         - 'tests/*'
