--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,16 +10,14 @@ build:
                     -
                         command: phpcs-run
                         use_website_config: true
+                    -
+                      command: 'vendor/bin/phpunit'
+                      coverage:
+                        file: 'build/clover.xml'
+                        format: 'clover'
             environment:
                 node:
                     version: 6.0.0
-        tests:
-          override:
-            -
-              command: 'vendor/bin/phpunit --coverage-clover=build/clover.xml'
-              coverage:
-                file: 'build/clover.xml'
-                format: 'clover'
 filter:
     excluded_paths:
         - 'tests/*'
