--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "bpci/sum-up",
-  "description": "SumUp PHP SDK",
+  "description": "SumUp PHP lib",
   "type": "library",
   "minimum-stability": "stable",
   "license": "MIT",
@@ -12,8 +12,7 @@
   ],
   "require": {
     "php": "^7",
-    "guzzlehttp/guzzle": "^6.3",
-    "symfony/form": "^4.0"
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
@@ -31,7 +30,8 @@
     "symfony/thanks": "^1.0",
     "symfony/twig-bundle": "^4.0",
     "symfony/web-server-bundle": "^4.0",
-    "symfony/yaml": "^4.0"
+    "symfony/yaml": "^4.0",
+    "symfony/form": "^4.0"
   },
   "config": {
     "preferred-install": {
