--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7",
-    "guzzlehttp/guzzle": "^6.3"
+    "php-http/guzzle6-adapter": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
