--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   ],
   "require": {
     "php": "^7",
+    "payum/core": "^1.5",
     "php-http/guzzle6-adapter": "^1.1"
   },
   "require-dev": {
