--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 vendor/
+bin/
 .idea/
 ###> symfony/phpunit-bridge ###
 .phpunit
@@ -9,3 +10,15 @@ vendor/
 /phpunit.xml
 ###< phpunit/phpunit ###
 /build/
+
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
+/bin/
