--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,18 @@
   "require": {
     "php": "^7",
     "payum/core": "^1.5",
+    "payum/payum-bundle": "^2.3",
     "php-http/guzzle6-adapter": "^1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5",
     "doctrine/doctrine-bundle": "^1.8",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "phpunit/phpunit": "^6.5",
     "symfony/console": "^4.0",
+    "symfony/debug": "^4.0",
     "symfony/dotenv": "^4.0",
     "symfony/flex": "^1.0",
+    "symfony/form": "^4.0",
     "symfony/framework-bundle": "^4.0",
     "symfony/lts": "^4@dev",
     "symfony/maker-bundle": "^1.0",
@@ -31,14 +34,15 @@
     "symfony/thanks": "^1.0",
     "symfony/twig-bundle": "^4.0",
     "symfony/web-server-bundle": "^4.0",
-    "symfony/yaml": "^4.0",
-    "symfony/form": "^4.0"
+    "symfony/yaml": "^4.0"
   },
   "config": {
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "bin-dir": "bin",
+    "vendor-dir": "vendor"
   },
   "scripts": {
     "auto-scripts": {
