--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -4,6 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 APP_SECRET=5dbc09ddf65fcd8ae1025573c9ae0f4a
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
@@ -13,5 +14,5 @@ APP_SECRET=5dbc09ddf65fcd8ae1025573c9ae0f4a
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=sqlite:///%kernel.project_dir%/tests/Application/var/sumup.db
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/sumup.db
 ###< doctrine/doctrine-bundle ###
