--- a/tests/Application/config/routes.yaml
+++ b/tests/Application/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: BPCI\SumUp\Tests\Controller\DefaultController::index
+index:
+    path: /
+    controller: BPCI\SumUp\Tests\Controller\DefaultController::index
+
+payum_all:
+  resource: "@PayumBundle/Resources/config/routing/all.xml"
